--- a/circle.yml
+++ b/circle.yml
@@ -22,8 +22,8 @@ deployment:
     branch: /.*/
     commands:
       - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" -e="${DOCKER_EMAIL}"
-      - docker tag ${DOCKER_IMAGE}:${CIRCLE_SHA1} ${DOCKER_IMAGE}:${CIRCLE_BRANCH}
-      - docker tag ${DOCKER_IMAGE}:${CIRCLE_SHA1} ${DOCKER_IMAGE}:${CIRCLE_TAG}
+      - docker tag -f ${DOCKER_IMAGE}:${CIRCLE_SHA1} ${DOCKER_IMAGE}:${CIRCLE_BRANCH}
+      - docker tag -f ${DOCKER_IMAGE}:${CIRCLE_SHA1} ${DOCKER_IMAGE}:${CIRCLE_TAG}
       - docker push ${DOCKER_IMAGE}:${CIRCLE_SHA1}
       - docker push ${DOCKER_IMAGE}:${CIRCLE_BRANCH}
       - docker push ${DOCKER_IMAGE}:${CIRCLE_TAG}
