--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "keyfctl",
   "version": "3.0.0",
   "description": "",
-  "main": "validate.js",
+  "main": "lib/keyfctl.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
